Updated About content

--- a/projecttemplate.html
+++ b/projecttemplate.html
@@ -151,9 +151,9 @@
 			</div>
 			<!-- Footer Links -->
 			<div class="footer-links">
-				<a href="styleguide.html" target="_blank">Style Guide</a>
-				<a href="https://github.com/cwkshum/IAT339_Portfolio" target="_blank">GitHub</a>
-				<a href="citations.html" target="_blank">Citations</a>
+				<a href="mailto:carissashum@gmail.com" target="_blank">Contact</a>
+				<a href="https://github.com/cwkshum" target="_blank">GitHub</a>
+				<!-- <a href=" " target="_blank">LinkedIn</a> -->
 			</div>
 		</footer>
   	</body>
