--- a/seerem.html
+++ b/seerem.html
@@ -205,21 +205,11 @@
 			</div>
 			<!-- Footer Links -->
 			<div class="footer-links">
-				<!-- <a href="styleguide.html" target="_blank">Style Guide</a>
-				<a href="https://github.com/cwkshum/IAT339_Portfolio" target="_blank">GitHub</a>
-				<a href="citations.html" target="_blank">Citations</a> -->
+				<a href="mailto:carissashum@gmail.com" target="_blank">Contact</a>
+				<a href="https://github.com/cwkshum" target="_blank">GitHub</a>
+				<!-- <a href=" " target="_blank">LinkedIn</a> -->
 			</div>
 		</footer>
-
-		<!-- The Modal
-		<div id="myModal" class="modal">
-			<span class="close">&times;</span>
-			<img class="modal-content" id="img01">
-			<div id="caption"></div>
-		</div>
-		
-		Javascript for Lightbox 
-		<script src="js/lightbox.js"></script> -->
 
 		<!-- Javascript for Scroll to Top -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
