--- a/vancitycycling.html
+++ b/vancitycycling.html
@@ -136,7 +136,7 @@
 	    	</div>
 	    	<!-- Description -->
 	    	<div class="process-description">
-				<p>Once the details and wireframes of each application activity was planned out and designed, I helped create the 
+				<p>Once the details and wireframes of each application activity were planned out and designed, I helped create the 
 					overall branding of VanCity Cycling which utilized the colours of blue and green to represent Vancouver. I 
 					then assisted in programming the interface for each activity that we had planned to implement in our application 
 					in Android Studio using XML.</p>
@@ -210,7 +210,7 @@
 
 				<p>Additionally, the GPS was utilized in the resource activity to show the current weather of the area that the user is 
 					in based on their device’s location through the use of web services. The cyclist’s current speed will also be displayed 
-					on the screen through the use of a speedometer and the GPS to track the user’s current location.</p>
+					on the screen through the use of a speedometer and GPS to track the user’s current location.</p>
 				
 				<!-- Image -->
 				<img src="img/vancity/map.png" alt="VanCity Cycling Interface Map and Resource Activities">
@@ -228,7 +228,7 @@
 				<p>An instance where I integrated the use of device sensors within the app was through the use of in-app cycling alerts. 
 					These alerts will popup if the device light or temperature sensor detects that it is dark, hot outside (above 18ºC), 
 					or cold outside (below 7ºC) with a friendly warning once a cycling route has been selected. The intention behind these 
-					alerts are to remind users to exercise caution when cycling at night or to ensure that they are prepared for certain 
+					alerts is to remind users to exercise caution when cycling at night or to ensure that they are prepared for certain 
 					weather conditions. </p>
 
 				<video width="100%" controls autoplay muted loop>
@@ -239,7 +239,7 @@
 				<p>The air pressure sensor data was also implemented and displayed in the resource activity to allow the user to see the 
 					change in air pressure as they are cycling. If the air pressure sensor returns a reading with a lower value, this 
 					informs the cyclist that the altitude is increasing which could result in a more difficult trip as they are most likely 
-					cycling uphill. Another feature that was implemented on the resource activity were implicit activity links that lead users 
+					cycling uphill. Another feature that was implemented on the resource activity was implicit activity links that lead users 
 					to helpful cycling resources such as bike safety and bike laws. </p>
 				
 				<video width="100%" controls autoplay muted loop>
@@ -316,9 +316,9 @@
 			</div>
 			<!-- Footer Links -->
 			<div class="footer-links">
-				<!-- <a href="styleguide.html" target="_blank">Style Guide</a>
-				<a href="https://github.com/cwkshum/IAT339_Portfolio" target="_blank">GitHub</a>
-				<a href="citations.html" target="_blank">Citations</a> -->
+				<a href="mailto:carissashum@gmail.com" target="_blank">Contact</a>
+				<a href="https://github.com/cwkshum" target="_blank">GitHub</a>
+				<!-- <a href=" " target="_blank">LinkedIn</a> -->
 			</div>
 		</footer>
 
