--- a/about.html
+++ b/about.html
@@ -44,9 +44,14 @@
 	    	<!-- Description -->
 	    	<div class="page-description">
 		    	<h2>Hello, I'm Carissa!</h2>
-		    	<p>I am a Surrey based web developer and UX/UI designer that is currently studying Interactive Arts and Technology at Simon Fraser University. With a strong interest in web development and interface design, I hope to create a positive user experience through the work I produce by combining my love of coding and design. My goal is to utilize my skills in front-end and back-end web development as well as my design knowledge to create meaningful applications ranging from the web to mobile that can meet the needs of the intended users.</p>
+		    	<p>I am a Vancouver based web developer and UX/UI designer that is currently studying 
+					Interactive Arts and Technology at Simon Fraser University. My goal is to create a positive user experience 
+					through the work I produce by combining my knowledge and background in coding and design. Utilizing my skills 
+					in front-end and back-end development, I aim to create meaningful applications ranging from the web to mobile 
+					that can exceed the needs of the intended users. When I am not at my computer coding, I can be found reading 
+					mystery novels, baking desserts, or dancing!</p>
 			
-				<p>If you are interested in working together, you can contact me at <a href="mailto:carissashum@gmail.com" target="_blank">carissashum@gmail.com</a>. Feel free to leave me a message and I will get back to you as soon as I can.</p>
+				<p>Currently seeking web development internship opportunities and can be contacted at <a href="mailto:carissashum@gmail.com" target="_blank">carissashum@gmail.com</a>.</p>
 			</div>
 		</div>
 
@@ -58,9 +63,9 @@
 			</div>
 			<!-- Footer Links -->
 			<div class="footer-links">
-				<!-- <a href="styleguide.html" target="_blank">Style Guide</a>
-				<a href="https://github.com/cwkshum/IAT339_Portfolio" target="_blank">GitHub</a>
-				<a href="citations.html" target="_blank">Citations</a> -->
+				<a href="mailto:carissashum@gmail.com" target="_blank">Contact</a>
+				<a href="https://github.com/cwkshum" target="_blank">GitHub</a>
+				<!-- <a href=" " target="_blank">LinkedIn</a> -->
 			</div>
 		</footer>
   	</body>
