--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<div class="project-display project-one">
 					<!-- Project Image -->
 					<div class="project-image">
-						<img src="img/vancityproject.png" alt="VanCity Cycling Project">
+						<a href="vancitycycling.html"><img src="img/vancityproject.png" alt="VanCity Cycling Project"></a>
 					</div>
 					<!-- Project Description -->
 					<div class="project-description-container">
@@ -109,7 +109,7 @@
 				<div class="project-display project-two">
 					<!-- Project Image -->
 					<div class="project-image">
-						<img src="img/seeremproject.png" alt="SeeRem Project">
+						<a href="seerem.html"><img src="img/seeremproject.png" alt="SeeRem Project"></a>
 					</div>
 					<!-- Project Description -->
 					<div class="project-description-container">
@@ -128,7 +128,7 @@
 				<div class="project-display project-one">
 					<!-- Project Image -->
 					<div class="project-image">
-						<img src="img/shoeaddictionproject.png" alt="Shoe Addiction">
+						<a href="shoeaddiction.html"><img src="img/shoeaddictionproject.png" alt="Shoe Addiction"></a>
 					</div>
 					<!-- Project Description -->
 					<div class="project-description-container">
@@ -145,7 +145,7 @@
 				<div class="project-display project-two">
 					<!-- Project Image -->
 					<div class="project-image">
-						<img src="img/psodproject.png" alt="PSOD Videos">
+						<a href="psod.html"><img src="img/psodproject.png" alt="PSOD Videos"></a>
 					</div>
 					<!-- Project Description -->
 					<div class="project-description-container">
@@ -168,10 +168,9 @@
 			</div>
 			<!-- Footer Links -->
 			<div class="footer-links">
-				<!-- <a href=" " target="_blank">Facebook</a> -->
-				<!-- <a href="styleguide.html" target="_blank">Style Guide</a>
-				<a href="https://github.com/cwkshum/IAT339_Portfolio" target="_blank">GitHub</a>
-				<a href="citations.html" target="_blank">Citations</a> -->
+				<a href="mailto:carissashum@gmail.com" target="_blank">Contact</a>
+				<a href="https://github.com/cwkshum" target="_blank">GitHub</a>
+				<!-- <a href=" " target="_blank">LinkedIn</a> -->
 			</div>
 		</footer>
 
