Added LinkedIn to footer

--- a/seerem.html
+++ b/seerem.html
@@ -207,7 +207,7 @@
 			<div class="footer-links">
 				<a href="mailto:carissashum@gmail.com" target="_blank">Contact</a>
 				<a href="https://github.com/cwkshum" target="_blank">GitHub</a>
-				<!-- <a href=" " target="_blank">LinkedIn</a> -->
+				<a href="https://www.linkedin.com/in/carissa-shum" target="_blank">LinkedIn</a>
 			</div>
 		</footer>
 
