--- a/about.html
+++ b/about.html
@@ -59,13 +59,13 @@
 		<footer>
 			<!-- Copyright Information -->
 			<div class="footer-copyright">
-				<p>&#169; 2020 Carissa Shum</p>
+				<p>&#169; 2021 Carissa Shum</p>
 			</div>
 			<!-- Footer Links -->
 			<div class="footer-links">
 				<a href="mailto:carissashum@gmail.com" target="_blank">Contact</a>
 				<a href="https://github.com/cwkshum" target="_blank">GitHub</a>
-				<!-- <a href=" " target="_blank">LinkedIn</a> -->
+				<a href="https://www.linkedin.com/in/carissa-shum" target="_blank">LinkedIn</a>
 			</div>
 		</footer>
   	</body>
