--- a/vancitycycling.html
+++ b/vancitycycling.html
@@ -60,10 +60,6 @@
 	    	<!-- Image -->
 	    	<div class="image-container">
 		       	<img src="img/vancity/overview.png" alt="VanCity Cycling Mobile Application">
-				   <!-- <video width="100%" height="300" controls autoplay muted loop>
-					<source src="img/vancity/vancityproject.mp4" type="video/mp4">
-				  Your browser does not support the video tag.
-				  </video> -->
 	    	</div>
 		</div>
 
@@ -318,7 +314,7 @@
 			<div class="footer-links">
 				<a href="mailto:carissashum@gmail.com" target="_blank">Contact</a>
 				<a href="https://github.com/cwkshum" target="_blank">GitHub</a>
-				<!-- <a href=" " target="_blank">LinkedIn</a> -->
+				<a href="https://www.linkedin.com/in/carissa-shum" target="_blank">LinkedIn</a>
 			</div>
 		</footer>
 
