--- a/psod.html
+++ b/psod.html
@@ -48,7 +48,7 @@
 	    		<h2>Overview</h2>
 	    		<hr>
 	    		<p>During the summer of the 2020 COVID-19 pandemic, I created videos for the graduating dancers at 
-					<a href="https://www.panoramadance.com" target="_blank">Panorama School of Dance</a> as well as 
+					<a href="https://www.panoramadance.com/about-us/" target="_blank">Panorama School of Dance</a> as well as 
 					the summer camps that the studio was running. Due to the restrictions that the province had in place 
 					that summer, this allowed the dancers to have a digital memory of their performances as well as a 
 					photo slideshow. I was responsible for editing together the video clips and compiling the photos 
