--- a/projecttemplate.html
+++ b/projecttemplate.html
@@ -11,7 +11,7 @@
     	<link rel="icon" href="img/logo.png" type="image/png">
 
     	<!-- Linked Google Fonts -->
-    	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap" rel="stylesheet">
     	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap" rel="stylesheet">
 
     	<!-- Linked Style Sheets -->
