--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 		<link rel="icon" href="img/logo.png" type="image/png">
 
 		<!-- Linked Google Fonts -->
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap" rel="stylesheet">
 
 		<!-- Linked Style Sheets -->
 		<link href="css/main.css" rel="stylesheet">
 		<link href="css/index.css" rel="stylesheet"> 
-		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+		<link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -36,8 +36,8 @@
 		  	</ul>
 		</nav>
 
+		<!-- Header Curves -->
 		<div class="curve-container">
-			<!-- <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" preserveAspectRatio="none" width="1440" height="560" viewBox="0 0 1440 560"> -->
 			<svg class ="curves" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" preserveAspectRatio="none" viewBox="0 0 1440 560">
 				<g mask="url(&quot;#SvgjsMask1011&quot;)" fill="none">
 					<path d="M1601.07 114.56C1438.18 116.67 1292.61 305.4 977.89 304.96 663.18 304.52 535.07-49.02 354.72-62.35" stroke="rgba(251, 250, 250, 0.6)" stroke-width="4"></path>
@@ -72,6 +72,7 @@
 			</div>
 		</header>
 
+		<!-- Header Waves -->
 		<div class ="wave-container">
 			<svg id="visual" viewBox="0 0 900 200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 				<path d="M0 170L25 172C50 174 100 178 150 177.8C200 177.7 250 173.3 300 165.8C350 158.3 400 147.7 450 141.8C500 136 550 135 600 142.2C650 149.3 700 164.7 750 168C800 171.3 850 162.7 875 158.3L900 154L900 0L875 0C850 0 800 0 750 0C700 0 650 0 600 0C550 0 500 0 450 0C400 0 350 0 300 0C250 0 200 0 150 0C100 0 50 0 25 0L0 0Z" fill="#ffffff"></path>
@@ -174,7 +175,7 @@
 			</div>
 		</footer>
 
-		<!-- Javascript for Navigation -->
+		<!-- Linked Javascript -->
 		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 		<script src="js/main.js"></script>
 		<script src="js/animations.js"></script>
