--- a/shoeaddiction.html
+++ b/shoeaddiction.html
@@ -11,13 +11,14 @@
     	<link rel="icon" href="img/logo.png" type="image/png">
 
     	<!-- Linked Google Fonts -->
-    	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap" rel="stylesheet">
     	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap" rel="stylesheet">
 
     	<!-- Linked Style Sheets -->
     	<link href="css/main.css" rel="stylesheet">
     	<link href="css/project.css" rel="stylesheet">
     	<link href="css/shoeaddiction.css" rel="stylesheet">
+		<link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
   	</head>
 
   	<body>
@@ -38,29 +39,24 @@
 
 	    <!-- Header -->
 	    <header class="sub-header">
-	    	<h1>Shoe Addiction</h1>
-	    	<h2>Back-End Website</h2>
+	    	<h1 data-aos="fade">Shoe Addiction</h1>
+	    	<h2 data-aos="fade">Back-End Website</h2>
 	    </header>
 
 	    <div class="container">
 	    	<!-- Information About Project -->
-	    	<div class="page-description">
+	    	<div class="page-description" data-aos="fade">
 	    		<h2>Overview</h2>
 	    		<hr>
-	    		<p>Shoe Addiction is a fictional shoe store web application project, focused on the back-end handling of user requests. 
-					The goal is to create a website that would be able to handle user input and utilize a database to store and retrieve 
-					data. The website was developed in a team of three to display products offered by the store through a database, allow 
-					visitors to browse content units, and handle member registration, log in as well as customization. The overall 
-					functionality of the website was developed to help gain a better understanding of the structure in present-day e-commerce 
-					sites.</p>
+	    		<p>Shoe Addiction is a fictional shoe store web application academic project, focused on the back-end handling of user requests. The goal is to create a website that would be able to handle user input and utilize a database to store and retrieve data. The website was developed in a team of three to display products offered by the store through a database, allow visitors to browse content units, and handle member registration, log in as well as customization. The overall functionality of the website was developed to help gain a better understanding of the structure in present-day e-commerce sites.</p>
 	    	</div>
 	    	<!-- Image -->
-	    	<div class="image-container">
+	    	<div class="image-container" data-aos="fade">
 		       	<img src="img/shoeaddictionproject.png" alt="Shoe Addiction Website">
 	    	</div>
 		</div>
 
-		<div class="project-description">
+		<div class="project-description" data-aos="fade">
 			<!-- Project Role -->
 			<section>
 				<h3>Role</h3>
@@ -99,105 +95,106 @@
 		</div>
 
 		<!-- Divider -->
-		<hr class="divider">
+		<hr class="divider" data-aos="fade">
 
 		<!-- Project Analysis Part One -->
 		<div class="container">
-			<div class="heading-container">
+			<!-- Heading -->
+			<div class="heading-container" data-aos="fade">
 	    		<h3>Database Design</h3>
 	    	</div>
 			<!-- Description -->
-	    	<div class="process-description">
-	    		<p>Starting with the database design, an ER Diagram was created to understand what information was needed to be stored 
-					on the site to handle the intended functionality. The site had to be able to store and retrieve data regarding 
-					customer accounts, the products available, as well as allow users to customize their accounts and add items to their 
-					cart. This led to the creation of four main entities with their respective attributes and relations; Members, Products, 
-					Cart and Customization. Once the diagram was finalized, the database was created using MySQL.</p>
+	    	<div class="process-description" data-aos="fade">
+	    		<p>Starting with the database design, an ER Diagram was created to understand what information was needed to be stored on the site to handle the intended functionality. The site had to be able to store and retrieve data regarding customer accounts, the products available, as well as allow users to customize their accounts and add items to their cart. This led to the creation of four main entities with their respective attributes and relations; Members, Products, Cart and Customization. Once the diagram was finalized, the database was created using MySQL.</p>
 	    	
 				<!-- Image -->
-				<img src="img/shoeaddiction/shoeaddictiondbdesign.png" alt="Shoe Addiction Database Design">
+				<figure>
+					<img src="img/shoeaddiction/shoeaddictiondbdesign.png" alt="Shoe Addiction Database Design">
+					<figcaption>Database design of Shoe Addiction</figcaption>
+				</figure>
 			</div>
 		</div>
 
 		<!-- Project Analysis Part Two -->
 		<div class="container">
-			<div class="heading-container">
+			<!-- Heading -->
+			<div class="heading-container" data-aos="fade">
 	    		<h3>Front-End Development</h3>
 	    	</div>
 	    	<!-- Description -->
-	    	<div class="process-description">
-	    		<p>The next step of the project was front-end development, where I used HTML, CSS, and Javascript to create a basic structure 
-					for the website based on the wireframes that we designed. Inspiration from current shoe websites was used in order to 
-					maintain a traditional e-commerce site that users would immediately recognize to maintain professional credibility while 
-					incorporating unique elements to distinguish the site. Images and content were then added and the branding was constructed 
-					to create a comprehensive user interface.</p>
+	    	<div class="process-description" data-aos="fade">
+	    		<p>The next step of the project was front-end development, where I used HTML, CSS, and Javascript to create a basic structure for the website based on the wireframes that we designed. Inspiration from current shoe websites was used in order to maintain a traditional e-commerce site that users would immediately recognize to maintain professional credibility while incorporating unique elements to distinguish the site. Images and content were then added and the branding was constructed to create a comprehensive user interface.</p>
 	    		<!-- Video -->
-				<img src="img/shoeaddiction/shoeaddictionwireframes.png" alt="Shoe Addiction Wireframes">
-				<video width="100%" controls autoplay muted loop>
-					<source src="img/shoeaddiction/frontend.mp4" type="video/mp4">
-				  	Your browser does not support the video tag.
-				</video>
+				<figure>
+					<img src="img/shoeaddiction/shoeaddictionwireframes.png" alt="Shoe Addiction Wireframes">
+					<figcaption>Initial site wireframes</figcaption>
+				</figure>
+				
+				<figure>
+					<video width="100%" controls autoplay muted loop>
+						<source src="img/shoeaddiction/frontend.mp4" type="video/mp4">
+						  Your browser does not support the video tag.
+					</video>
+					<figcaption>Demo of front-end implementation</figcaption>
+				</figure>
 	    	</div>
 		</div>
 
 		<!-- Project Analysis Part Three -->
 		<div class="container">
-	    	<div class="heading-container">
+			<!-- Heading -->
+	    	<div class="heading-container" data-aos="fade">
 	    		<h3>Back-End Implementation</h3>
 	    	</div>
 	    	<!-- Description -->
-	    	<div class="process-description">
-	    		<p>Our focus then shifted to back-end development where I used PHP and MySQL to process user and database information. Users 
-					could browse the shoes that were retrieved from the database and were also able to use filters to refine the products that 
-					were shown. Additionally, by using AJAX, I was able to update the page content without having the page reload every time. 
-					This meant that the website had live filtering for a more seamless user shopping experience. Through the use of PHP form 
-					handling and SQL query statements, visitors also had the ability to sign up for an account or login using a pre-existing 
-					account. Further functionality that I made available was the ability for members to add items to their favourites list 
-					and cart. With the different abilities that visitors and members have on the site, PHP sessions were implemented to check 
-					if a user is logged in.</p>
+	    	<div class="process-description" data-aos="fade">
+	    		<p>Our focus then shifted to back-end development where I used PHP and MySQL to process user and database information. Users could browse the shoes that were retrieved from the database and were also able to use filters to refine the products that were shown. Additionally, by using AJAX, I was able to update the page content without having the page reload every time. This meant that the website had live filtering for a more seamless user shopping experience. Through the use of PHP form handling and SQL query statements, visitors also had the ability to sign up for an account or login using a pre-existing account. Further functionality that I made available was the ability for members to add items to their favourites list and cart. With the different abilities that visitors and members have on the site, PHP sessions were implemented to check if a user is logged in.</p>
 				<!-- Video -->
-				<video width="100%" controls autoplay muted loop>
-					<source src="img/shoeaddiction/backend.mp4" type="video/mp4">
-				  	Your browser does not support the video tag.
-				</video>
+				<figure>
+					<video width="100%" controls autoplay muted loop>
+						<source src="img/shoeaddiction/backend.mp4" type="video/mp4">
+						  Your browser does not support the video tag.
+					</video>
+					<figcaption>Demo of back-end implementation</figcaption>
+				</figure>	
 			</div>
 		</div>
 
 		<!-- Project Analysis Part Four -->
 		<div class="container">
-	    	<div class="heading-container">
+			<!-- Heading -->
+	    	<div class="heading-container" data-aos="fade">
 	    		<h3>Challenges of New Languages</h3>
 	    	</div>
 	    	<!-- Description -->
-	    	<div class="process-description">
-	    		<p>Since this was the first time I worked with PHP and MySQL to develop a website focused primarily on back-end development, 
-					it was challenging to get the functionality of the site working at each phase. It took a lot of time to debug certain 
-					issues in our code. By dedicating more time to learning and understanding each topic, I was able to debug issues that 
-					arose and got the final website working with the intended functionality.</p>
+	    	<div class="process-description" data-aos="fade">
+	    		<p>Since this was the first time I worked with PHP and MySQL to develop a website focused primarily on back-end development, it was challenging to get the functionality of the site working at each phase. It took a lot of time to debug certain issues in our code. By dedicating more time to learning and understanding each topic, I was able to debug issues that arose and got the final website working with the intended functionality.</p>
 				<!-- Image -->
-				<img src="img/shoeaddiction/shoeaddictionchallenges.png" alt="Shoe Addiction Account Page">
+				<figure>
+					<img src="img/shoeaddiction/shoeaddictionchallenges.png" alt="Shoe Addiction Code and Cart Page">
+					<figcaption>PHP code for the cart page of the site</figcaption>
+				</figure>
 			</div>
 		</div>
 
 		<!-- Project Analysis Part Five -->
 		<div class="container">
-	    	<div class="heading-container">
+			<!-- Heading -->
+	    	<div class="heading-container" data-aos="fade">
 	    		<h3>Conclusion</h3>
 	    	</div>
 	    	<!-- Project Conclusion -->
-	    	<div class="process-description">
-	    		<p>Overall, the website development took three months to complete. As it was outside of the project scope, for future iterations 
-					I would like to explore the possibility of implementing responsiveness for the website as well as implementing the purchase 
-					process to complete the entire shopping experience. The final outcome was a fully developed website that had both front-end 
-					and back-end implemented that successfully used a database to handle the website’s information.</p>
+	    	<div class="process-description" data-aos="fade">
+	    		<p>Overall, the website development took three months to complete. As it was outside of the project scope, for future iterations I would like to explore the possibility of implementing responsiveness for the website as well as implementing the purchase process to complete the entire shopping experience. Through this project, I was able to learn how to work with MySQL databases as well as how to develop a web application. It was my first time working with the PHP language which allowed me to acquire the skill in handling and processing user requests that I can carry over to future back-end web development projects. The final outcome was a fully developed website that had both front-end and back-end implemented that successfully used a database to handle the website’s information.</p>
 				<!-- Embedded Video -->
-				<div style="padding:70% 0 0 0;position:relative;">
+				<div class="embedded-video">
 					<iframe src="https://player.vimeo.com/video/587373476?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=af17ab7b4f" 
-							frameborder="0" 
-							allow="autoplay; fullscreen; picture-in-picture" 
-							allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" 
-							title="conclusion.mp4">
+						frameborder="0" 
+						allow="autoplay; fullscreen; picture-in-picture" 
+						allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" 
+						title="conclusion.mp4">
 					</iframe>
+					<p>Demo of Shoe Addiction</p>
 				</div>
 				<script src="https://player.vimeo.com/api/player.js"></script>
 			</div>
@@ -205,10 +202,10 @@
 
 		<!-- Next Project Button -->
 		<div class="project-navigation">
-			<div class="prev">
+			<div class="prev" data-aos="fade-right">
 				<a href="seerem.html" class="action-btn arrow-left">Previous:&nbsp;SeeRem</a>
 			</div>
-			<div class="next">
+			<div class="next" data-aos="fade-left">
 				<a href="psod.html" class="action-btn arrow-right">Next:&nbsp;PSOD Videos</a>
 			</div>
 		</div>
@@ -230,8 +227,10 @@
 			</div>
 		</footer>
 
-		<!-- Javascript for Scroll to Top -->
+		<!-- Linked Javascript -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="js/projects.js"></script>
+		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+		<script src="js/animations.js"></script>
   	</body>
 </html>
