Removed fade in animations from project overviews

--- a/psod.html
+++ b/psod.html
@@ -39,20 +39,20 @@
 
 	    <!-- Header -->
 	    <header class="sub-header">
-	    	<h1 data-aos="fade">PSOD Videos</h1>
-	    	<h2 data-aos="fade">Video Editing</h2>
+	    	<h1>PSOD Videos</h1>
+	    	<h2>Video Editing</h2>
 	    </header>
 
 	    <div class="container">
 	    	<!-- Information About Project -->
-	    	<div class="page-description" data-aos="fade">
+	    	<div class="page-description">
 	    		<h2>Overview</h2>
 	    		<hr>
 	    		<p>During the summer of the 2020 COVID-19 pandemic, I created videos for the graduating dancers at  
 					<a href="https://www.panoramadance.com/about-us/" target="_blank">Panorama School of Dance</a> (PSOD) as well as the summer camps that the studio was running as a freelance job. Due to the restrictions that the province had in place that summer, this allowed the dancers to have a digital memory of their performances as well as a photo slideshow. I was responsible for editing together the video clips and compiling the photos together to form a comprehensive video using Adobe Premiere Pro that was then shared with the families.</p>
 	    	</div>
 	    	<!-- Image -->
-	    	<div class="image-container" data-aos="fade">
+	    	<div class="image-container">
 		       	<img src="img/psodproject.png" alt="PSOD Video">
 	    	</div>
 		</div>
