--- a/seerem.html
+++ b/seerem.html
@@ -39,13 +39,13 @@
 
 	    <!-- Header -->
 	    <header class="sub-header">
-	    	<h1 data-aos="fade">SeeRem</h1>
-	    	<h2 data-aos="fade">Front-End Website</h2>
+	    	<h1>SeeRem</h1>
+	    	<h2>Front-End Website</h2>
 	    </header>
 
 	    <div class="container">
 	    	<!-- Information About Project -->
-	    	<div class="page-description" data-aos="fade">
+	    	<div class="page-description">
 	    		<h2>Overview</h2>
 	    		<hr>
 	    		<p>Working in a team of two, we collaborated with the company <a href="https://www.seeda.dev/about-seeda-environmental-engineering" target="_blank">SEEDA</a> to develop a front-end website for their SeeRem division. The objective of the academic project was to design and build a functioning website for SeeRem to help potential customers learn more about their application and connect with the sales team. By communicating with the company, I was able to learn more about the service they were offering, which assisted in the process of better designing for the intended purpose of the site. The end product was a fully developed front-end responsive website that promoted the SeeRem application, which led to an internship position with the company in 2021.</p>
@@ -55,7 +55,7 @@
 	    		</div>
 	    	</div>
 	    	<!-- Image -->
-	    	<div class="image-container" data-aos="fade">
+	    	<div class="image-container">
 				<img src="img/seeremproject.png" alt="SeeRem Website">
 	    	</div>
 		</div>
