--- a/shoeaddiction.html
+++ b/shoeaddiction.html
@@ -39,19 +39,19 @@
 
 	    <!-- Header -->
 	    <header class="sub-header">
-	    	<h1 data-aos="fade">Shoe Addiction</h1>
-	    	<h2 data-aos="fade">Back-End Website</h2>
+	    	<h1>Shoe Addiction</h1>
+	    	<h2>Back-End Website</h2>
 	    </header>
 
 	    <div class="container">
 	    	<!-- Information About Project -->
-	    	<div class="page-description" data-aos="fade">
+	    	<div class="page-description">
 	    		<h2>Overview</h2>
 	    		<hr>
 	    		<p>Shoe Addiction is a fictional shoe store web application academic project, focused on the back-end handling of user requests. The goal is to create a website that would be able to handle user input and utilize a database to store and retrieve data. The website was developed in a team of three to display products offered by the store through a database, allow visitors to browse content units, and handle member registration, log in as well as customization. The overall functionality of the website was developed to help gain a better understanding of the structure in present-day e-commerce sites.</p>
 	    	</div>
 	    	<!-- Image -->
-	    	<div class="image-container" data-aos="fade">
+	    	<div class="image-container">
 		       	<img src="img/shoeaddictionproject.png" alt="Shoe Addiction Website">
 	    	</div>
 		</div>
