--- a/vancitycycling.html
+++ b/vancitycycling.html
@@ -39,19 +39,19 @@
 
 	    <!-- Header -->
 	    <header class="sub-header">
-	    	<h1 data-aos="fade">VanCity Cycling</h1>
-	    	<h2 data-aos="fade">Mobile Application</h2>
+	    	<h1>VanCity Cycling</h1>
+	    	<h2>Mobile Application</h2>
 	    </header>
 
 	    <div class="container">
 	    	<!-- Information About Project -->
-	    	<div class="page-description" data-aos="fade">
+	    	<div class="page-description">
 	    		<h2>Overview</h2>
 	    		<hr>
 	    		<p>VanCity Cycling is an android mobile application that allows users to plan their cycling trips around Vancouver. An academic project developed in a team of two in collaboration with <a href="https://citystudiovancouver.com/what-we-do/" target="_blank">CityStudio</a> and the <a href="https://vancouver.ca/streets-transportation/biking.aspx" target="_blank">City of Vancouver</a>, the goal is to promote bike riding as a mode of transportation for novice cyclists. Through VanCity Cycling, we wanted beginner cyclists to feel more comfortable with the idea of cycling around Vancouver by providing them with easy ways to plan their trips, get detailed information on the routes they are taking, as well as offer route options and resources to help them on their journey. The completed application was then presented to the City of Vancouver Transportation Division.</p>
 	    	</div>
 	    	<!-- Image -->
-	    	<div class="image-container" data-aos="fade">
+	    	<div class="image-container">
 		       	<img src="img/vancity/overview.png" alt="VanCity Cycling Mobile Application">
 	    	</div>
 		</div>
