Updated about content and index title heading

--- a/about.html
+++ b/about.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 	<head>
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    	<!-- Window Tab Title -->
+    	<!-- Page Tab Title -->
     	<title>About | Carissa Shum</title>
+
+		<!-- Page Description -->
+		<meta name="description" content="Hello, I'm Carissa Shum! I am a Vancouver based developer and UX/UI designer, currently studying Interactive Arts and Technology at Simon Fraser University." />
+
+		<!-- Page Keywords -->
+		<meta name="keywords" content="carissa, carissa shum, portfolio, design portfolio, developer portfolio, designer, developer, ux design, ui design, web development, mobile development, SIAT, Interactive Arts and Technology">
 
     	<!-- Tab Icon -->
     	<link rel="icon" href="img/logo.png" type="image/png">
@@ -45,14 +50,8 @@
 	    	<!-- Description -->
 	    	<div class="page-description" data-aos="fade">
 		    	<h2>Hello, I'm Carissa!</h2>
-		    	<p>I am a Vancouver based web developer and UX/UI designer that is currently studying 
-					Interactive Arts and Technology at Simon Fraser University. My goal is to create a positive user experience 
-					through the work I produce by combining my knowledge and background in coding and design. Utilizing my skills 
-					in front-end and back-end development, I aim to create meaningful applications ranging from the web to mobile 
-					that can exceed the needs of the intended users. When I am not at my computer coding, I can be found reading 
-					mystery novels, baking desserts, or dancing!</p>
-			
-				<p>Currently seeking web development internship opportunities and can be contacted at <a href="mailto:carissashum@gmail.com" target="_blank">carissashum@gmail.com</a>.</p>
+		    	<p>I am a Vancouver based developer and UX/UI designer, currently studying Interactive Arts and Technology at Simon Fraser University. My goal is to create a positive user experience through the work I produce by combining my knowledge and background in coding and design. Utilizing my skills in front-end and back-end development, I aim to create meaningful applications ranging from the web to mobile that can exceed the needs of the intended users. When I am not at my computer coding, I can be found reading mystery novels, baking desserts, or dancing!</p>
+				<p>I will be starting an Android Software Development Co-op with <a href="https://www.formswim.com/pages/swimming-app" target="_blank">FORM Athletica</a> in 2022. If you are interested in collaborating on future projects, I can be contacted at <a href="mailto:carissashum@gmail.com" target="_blank">carissashum@gmail.com</a>.</p>
 			</div>
 		</div>
 
