--- a/shoeaddiction.html
+++ b/shoeaddiction.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 	<head>
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<!-- Website Tab Title -->
+    	<!-- Page Tab Title -->
     	<title>Shoe Addiction | Carissa Shum</title>
 
-    	<!-- Website Tab Icon -->
+		<!-- Page Description -->
+		<meta name="description" content="Shoe Addiction is a fictional shoe store web application academic project, focused on the back-end handling of user requests." />
+
+		<!-- Page Keywords -->
+		<meta name="keywords" content="carissa, carissa shum, shoe addiction, web application project, back-end development, shoe store, database, PHP, MySQL, HTML, CSS, Javascript">
+
+    	<!-- Tab Icon -->
     	<link rel="icon" href="img/logo.png" type="image/png">
 
     	<!-- Linked Google Fonts -->
@@ -40,7 +45,7 @@
 	    <!-- Header -->
 	    <header class="sub-header">
 	    	<h1>Shoe Addiction</h1>
-	    	<h2>Back-End Website</h2>
+	    	<h2>Web Application</h2>
 	    </header>
 
 	    <div class="container">
@@ -73,7 +78,6 @@
 					<li>HTML / CSS / JavaScript</li>  
 					<li>PHP</li>
 					<li>MySQL</li> 
-					<!-- <li>AJAX</li>   -->
 					<li>Figma</li>
 				</ul>
 			</section>
