--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<!-- Website Tab Title -->
+		<!-- Page Tab Title -->
 		<title>Carissa Shum</title>
 
-		<!-- Website Tab Icon -->
+		<!-- Page Description -->
+		<meta name="description" content="Hello, I'm Carissa Shum! Welcome to my portfolio showcasing my development and design work." />
+
+		<!-- Page Keywords -->
+		<meta name="keywords" content="carissa, carissa shum, portfolio, design portfolio, developer portfolio, designer, developer, ux design, ui design, web development, mobile development, design projects, development projects">
+
+		<!-- Tab Icon -->
 		<link rel="icon" href="img/logo.png" type="image/png">
 
 		<!-- Linked Google Fonts -->
@@ -60,7 +66,8 @@
 			<div class="header-content" data-aos="fade">
 				<h1>Carissa Shum</h1>
 				<h2>Hello, I'm</h2>
-				<h3>A Web Developer and UX/UI Designer</h3>
+				<!-- <h3>A Developer and UX/UI Designer</h3> -->
+				<h3>Web & Mobile Developer, UX/UI Designer</h3>
 			</div>
 			<!-- Header Links -->
 			<div class="side-nav" data-aos="fade">
@@ -135,7 +142,8 @@
 					<div class="project-description-container">
 						<div class="project-description">
 							<h3>Shoe Addiction</h3>
-							<p>Back-End Website</p>
+							<!-- <p>Back-End Website</p> -->
+							<p>Web Application</p>
 							<!-- Project Page Link -->
 							<a class="arrow-right" href="shoeaddiction.html">View&nbsp;More</a>
 						</div>
