Update copyright, resume, and references

--- a/shoeaddiction.html
+++ b/shoeaddiction.html
@@ -85,7 +85,7 @@
 			<section>
 				<h3>Team</h3>
 				<ul>
-					<li><a href="https://rowina.ca" target="_blank">Rowina Chan</a></li>
+					<li>Rowina Chan</li>
 					<li>Chamira Perera</li>
 				</ul>
 			</section>
@@ -221,7 +221,7 @@
 		<footer>
 			<!-- Copyright Information -->
 			<div class="footer-copyright">
-				<p>&#169; 2021 Carissa Shum</p>
+				<p>&#169; 2023 Carissa Shum</p>
 			</div>
 			<!-- Footer Links -->
 			<div class="footer-links">
