--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 	    	<div class="page-description" data-aos="fade">
 		    	<h2>Hello, I'm Carissa!</h2>
 		    	<p>I am a Vancouver based developer and UX/UI designer, currently studying Interactive Arts and Technology at Simon Fraser University. My goal is to create a positive user experience through the work I produce by combining my knowledge and background in coding and design. Utilizing my skills in front-end and back-end development, I aim to create meaningful applications ranging from the web to mobile that can exceed the needs of the intended users. When I am not at my computer coding, I can be found reading mystery novels, baking desserts, or dancing!</p>
-				<p>I will be starting an Android Software Development Co-op with <a href="https://www.formswim.com/pages/swimming-app" target="_blank">FORM Athletica</a> in 2022. If you are interested in collaborating on future projects, I can be contacted at <a href="mailto:carissashum@gmail.com" target="_blank">carissashum@gmail.com</a>.</p>
+				<p>Currently seeking software development internship opportunities, and can be contacted at <a href="mailto:carissashum@gmail.com" target="_blank">carissashum@gmail.com</a>.</p>
 			</div>
 		</div>
 
@@ -59,7 +59,7 @@
 		<footer>
 			<!-- Copyright Information -->
 			<div class="footer-copyright">
-				<p>&#169; 2021 Carissa Shum</p>
+				<p>&#169; 2023 Carissa Shum</p>
 			</div>
 			<!-- Footer Links -->
 			<div class="footer-links">
